examples/good/04-print.dog
yeet(10);
yeet(true);
yeet("str");

int var = 10;
yeet(var);