examples/bad/10-01-runtime-ass-no-init.dog
yeet("typecheck");
y = 15;